Remove hashmap lookups for getting world config during render, small clean up to world config code, use reference map for dynamic block colors